--- a/Firmware/MainController/MainController/MainController.ioc
+++ b/Firmware/MainController/MainController/MainController.ioc
@@ -1,14 +1,17 @@
 #MicroXplorer Configuration settings - do not modify
-#Wed May 27 16:12:18 BRT 2015
+#Thu May 28 15:41:57 GMT+03:00 2015
+FREERTOS.IPParameters=Tasks01
+FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask
 File.Version=5
 KeepUserPlacement=false
 Mcu.Family=STM32F2
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=USART2
-Mcu.IP4=USART3
-Mcu.IPNb=5
+Mcu.IP0=FREERTOS
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=USART2
+Mcu.IP5=USART3
+Mcu.IPNb=6
 Mcu.Name=STM32F207V(C-E-F-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PH0-OSC_IN
@@ -17,6 +20,7 @@ Mcu.Pin10=PA14
 Mcu.Pin11=PA15
 Mcu.Pin12=PB3
 Mcu.Pin13=PB4
+Mcu.Pin14=VP_FREERTOS_VS_ENABLE
 Mcu.Pin2=PA2
 Mcu.Pin3=PA3
 Mcu.Pin4=PB15
@@ -25,13 +29,13 @@ Mcu.Pin6=PD9
 Mcu.Pin7=PD11
 Mcu.Pin8=PD12
 Mcu.Pin9=PA13
-Mcu.PinsNb=14
+Mcu.PinsNb=15
 Mcu.UserName=STM32F207VCTx
 MxCube.Version=4.7.1
 MxDb.Version=DB.4.0.71
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SysTick_IRQn=true\:0\:0\:false
-NVIC.USART2_IRQn=true\:0\:0\:false
+NVIC.USART2_IRQn=true\:5\:0\:false
 PA13.Mode=JTAG(5-pin)
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=JTAG(5-pin)
@@ -108,7 +112,7 @@ RCC.HCLKFreq_Value=60000000
 RCC.HSE_VALUE=25000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=120000000
-RCC.IPParameters=PLLSource,LSI_VALUE,APB1TimFreq_Value,APB2Freq_Value,MCO2PinFreq_Value,APB1CLKDivider,PLLSourceVirtualString,FCLKCortexFreq_Value,48MHZClocksFreq_Value,AHBFreq_Value,VCOInputFreq_Value,PLLSourceVirtual,I2SClocksFreq_Value,SYSCLKFreq_VALUE,PLLP,SYSCLKSource,LSE_VALUE,HSE_VALUE,HSI_VALUE,VCOI2SOutputFreq_Value,PLLCLKFreq_Value,RTCFreq_Value,FamilyName,HCLKFreq_Value,EthernetFreq_Value,PLLM,VCOOutputFreq_Value,VcooutputI2S,CortexFreq_Value,APB1Freq_Value,RTCHSEDivFreq_Value,APB2TimFreq_Value
+RCC.IPParameters=PLLSource,LSI_VALUE,APB1TimFreq_Value,APB2Freq_Value,MCO2PinFreq_Value,APB1CLKDivider,FCLKCortexFreq_Value,AHBFreq_Value,48MHZClocksFreq_Value,VCOInputFreq_Value,PLLSourceVirtual,I2SClocksFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,PLLP,LSE_VALUE,HSE_VALUE,HSI_VALUE,VCOI2SOutputFreq_Value,PLLCLKFreq_Value,RTCFreq_Value,FamilyName,HCLKFreq_Value,EthernetFreq_Value,PLLM,VCOOutputFreq_Value,VcooutputI2S,CortexFreq_Value,APB1Freq_Value,RTCHSEDivFreq_Value,APB2TimFreq_Value
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO2PinFreq_Value=60000000
@@ -117,7 +121,6 @@ RCC.PLLM=20
 RCC.PLLP=RCC_PLLP_DIV4
 RCC.PLLSource=RCC_PLLSOURCE_HSE
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.PLLSourceVirtualString=RCC_PLLSOURCE_HSE
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=12500000
 RCC.SYSCLKFreq_VALUE=60000000
@@ -128,3 +131,5 @@ RCC.VCOOutputFreq_Value=240000000
 RCC.VcooutputI2S=120000000
 USART2.BaudRate=1000000
 USART2.IPParameters=BaudRate
+VP_FREERTOS_VS_ENABLE.Mode=Enabled
+VP_FREERTOS_VS_ENABLE.Signal=FREERTOS_VS_ENABLE
